--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,14 +2,14 @@
 /* =========================================================
   Common
 ========================================================= */
-@forward "global";
+// @forward "global";
 
-@forward "index-wp";
+// @forward "index-wp";
 
 @forward "component";
 
-@forward "module";
+// @forward "module";
 
-@forward "layout";
+// @forward "layout";
 
-@forward "project";
+// @forward "project";
