--- a/scss/global/setting/_s-color.scss
+++ b/scss/global/setting/_s-color.scss
@@ -24,15 +24,14 @@ $gray-steps: 8;
         $ratio: calc($index / $half-steps);
         $weight: $ratio-max - $ratio * 100%;
         @if $weight < 0% {
-        $weight: 0%;
+            $weight: 0%;
         }
         @if $weight > 100% {
-        $weight: 100%;
+            $weight: 100%;
         }
-
         @return mix(white, $color, $weight);
     } @else {
-        $ratio: ($index - $half-steps) / $half-steps;
+        // $ratio: ($index - $half-steps) / $half-steps;
         @return mix($color, black, $ratio-max - $ratio * 100%);
     }
 }
@@ -49,8 +48,8 @@ $gray-steps: 8;
         $ratio: math.div($index, $half-steps);
         @return mix($base, white, $ratio * 100%);
     } @else {
-        $ratio: ($index - $half-steps) / $half-steps;
-        @return mix(black, $base, $ratio * 100%);
+        // $ratio: ($index - $half-steps) / $half-steps;
+        // @return mix(black, $base, $ratio * 100%);
     }
 }
 
